Improve fix for Bootstrap select overflowing

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1553,11 +1553,9 @@ table {
                 .bootstrap-select {
                     max-width: 5em;
 
-                    .inner {
-                        max-height: 35vh !important; // override max-height set by bootstrap-select
-                    }
-                    
                     .dropdown-menu {
+                        z-index: 1035;
+
                         .active {
                             a,
                             a:hover,
